# aoc_2024

./: Cargo.toml  README.md  flake.nix
1/1/: main.rs
1/2/: main.rs
2/1/: main.rs
3/1/: main.rs
3/2/: main.rs
4/1/: main.rs
4/2/: main.rs
5/1/: main.rs
5/2/: main.rs
