[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "1_1"
path = "1/1/main.rs"

[[bin]]
name = "1_2"
path = "1/2/main.rs"

[[bin]]
name = "2_1"
path = "2/1/main.rs"

[[bin]]
name = "3_1"
path = "3/1/main.rs"

[[bin]]
name = "3_2"
path = "3/2/main.rs"

[[bin]]
name = "4_1"
path = "4/1/main.rs"

[[bin]]
name = "4_2"
path = "4/2/main.rs"

[[bin]]
name = "5_1"
path = "5/1/main.rs"

[[bin]]
name = "5_2"
path = "5/2/main.rs"

